[gd_scene load_steps=10 format=2]

[ext_resource path="res://Playercostume/Player.gd" type="Script" id=1]
[ext_resource path="res://UI.gd" type="Script" id=2]
[ext_resource path="res://Tilecostumes/Redtile.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Tilecostumes/Tile.tscn" type="PackedScene" id=6]
[ext_resource path="res://Tilecostumes/Redtile.gd" type="Script" id=7]
[ext_resource path="res://Levels/CustomLevel.gd" type="Script" id=8]
[ext_resource path="res://ExitSprite.tscn" type="PackedScene" id=9]

[node name="@Level999@2" type="Node2D"]
script = ExtResource( 8 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer" instance=ExtResource( 4 )]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="KinematicBody2D" parent="." instance=ExtResource( 5 )]
position = Vector2( 384, 192 )
script = ExtResource( 1 )

[node name="Tile" type="StaticBody2D" parent="." instance=ExtResource( 6 )]
position = Vector2( 384, 224 )

[node name="Redtile" type="StaticBody2D" parent="." groups=[
"coloredItems",
] instance=ExtResource( 3 )]
position = Vector2( 328, 152 )
script = ExtResource( 7 )

[node name="ExitSprite" type="Area2D" parent="." instance=ExtResource( 9 )]
position = Vector2( 328, 104 )
scale = Vector2( 0.5, 0.5 )
[connection signal="iamblue" from="Player" to="Player/AnimatedSprite" method="_on_Player_iamblue"]
[connection signal="iamgreen" from="Player" to="Player/AnimatedSprite" method="_on_Player_iamgreen"]
[connection signal="iamred" from="Player" to="Player/AnimatedSprite" method="_on_Player_iamred"]
